added new endpoint for uploading product photo
