# app/controllers/product/controller.py
@@ -1,9 +1,11 @@
 import uuid
-from flask import request
+
+from flask import request, current_app
+from werkzeug.utils import secure_filename
 from marshmallow import ValidationError
 
 from app.data.models import Product
-from .serializer import ProductSerializer, ProductPutSerializer
+from .serializer import ProductSerializer, ProductImagesSerializer
 
 
 def add_product():
@@ -47,8 +49,9 @@ def get_products():
 
 def change_product(id):
     data = request.json
+    request_method = request.method
     product_schema = ProductSerializer()
-    product_put_schema = ProductPutSerializer()
+    product_put_schema = ProductSerializer(method=request_method)
 
     try:
         product_id = uuid.UUID(id)
@@ -69,6 +72,40 @@ def change_product(id):
     response = product_schema.dump(ready_product)
 
     return response, 200
+
+
+def change_product_images(id):
+    images = {file: request.files[file] for file in request.files}
+    images_schema = ProductImagesSerializer()
+
+    try:
+        images_schema.load(images)
+    except ValidationError as error:
+        return {"error": error.messages}, 400
+
+    try:
+        product_id = uuid.UUID(id)
+    except ValueError:
+        return {"error": "Invalid id"}, 400
+
+    product = Product.get(product_id)
+
+    if not product:
+        error = f"Product not found."
+        return {"error": error}, 404
+
+    for key, image in images.items():
+        filename = image.filename
+        
+        filename = f"{uuid.uuid4()}.{filename.rsplit('.', 1)[1].lower()}"
+        filename = secure_filename(filename)
+        image.save(f"{current_app.config['MEDIA_PATH']}\\{filename}")
+
+        images[key] = filename
+
+    product.update(product_images=images)
+
+    return images, 200
 
 
 def delete_product(id):
